--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "swiper": "^11.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
